--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
     .container {
       padding-top: 10px;
     }
+    .title--teaching{
+      font-weight: bold;
+    }
     </style>
   </head>
   <body>
-    
+
 
     <div class="container">
       <div class="row">
@@ -68,29 +71,35 @@
       <div class="col-md-6">
         <h2>Teaching</h2>
         <ul>
-          <li><a href="http://www.geonode.org" target="_blank">GeoNode 2.0</a> - GfossDay 2013</li>
-          <li><a href="http://leafletjs.com/" target="_blank">LeafletJS </a> Workshop - XIV Italian Meeting of GRASS and GFOSS users</li>
-          <li><a href="https://www.mapbox.com/tilemill/" target="_blank">Tilemill</a> and <a href="http://mapproxy.org/" target="_blank">MapProxy</a> - GfossDay 2012</li>
-          <li><a href="http://pywps.wald.intevation.org/" target="_blank">PyWPS</a> Tutorial - FOSS4G 2010</li>
-          <li><a href="http://geodjango.org/" target="_blank">GeoDjango</a> Workshop - FOSS4G-IT Lugano</li>
-          <li> Also a lot of workshop on QGIS, GRASS GIS, PostGIS, Spatialite, MapServer, OpenLayers, etc.. :) </li>
+
+          <li><span class="title--teaching">Geonode Workshop</span> - GFOSS Day 2013, Bologna Italy</li>
+          <li><span class="title--teaching">Technological evolution in the publication and management of spatial data</span> - Seminar for Doctoral Students, University of Perugia Italy</li>
+          <li><span class="title--teaching">Using QGIS</span> - Umbria Region, Foligno (PG) Italy</li>
+          <li><span class="title--teaching">An overview of Open Source tecnology to publish geospatial data</span> -  CST Foligno (PG) Italy</li>
+          <li><span class="title--teaching">LeafletJS Workshop</span> - XIV Italian meeting of GRASS and GFOSS users, Genova Italy</li>
+          <li><span class="title--teaching">Using Imposm and Tilemill</span> - GFOSS Day 2012, Torino</li>
+          <li><span class="title--teaching">Advance use of QGIS</span> - Geocamp Summer School, Foligno (PG) Italy</li>
+          <li><span class="title--teaching">Introduction to QGIS and GRASS GIS</span>  - University of Perugia</li>
+          <li><span class="title--teaching">PyWPS: a tutorial for beginners and developers</span> - FOSS4G,  Barcelona</li>
+          <li><span class="title--teaching">GeoDjango Workshop</span>  - FOSS4G-IT, Lugano</li>
+          <li><span class="title--teaching">QGIS and Geodatabase</span> - Institute for Environmental Protection and Research, Rome</li>
         </ul>
       </div>
       <div class="col-md-6">
         <h2>Writing</h2>
         <ul>
           <li>
-            Luca Casagrande, Paolo Cavallini, Alessandro Frigeri, Alessandro Furieri, Ivan Marchesini, Markus Neteler (2012). 
-            <b>GIS Open Source</b>. Dario Flaccovio editore. 
+            Luca Casagrande, Paolo Cavallini, Alessandro Frigeri, Alessandro Furieri, Ivan Marchesini, Markus Neteler (2012).
+            <b>GIS Open Source</b>. Dario Flaccovio editore.
             <a href="http://www.darioflaccovio.it/libro.php/gis-open-source-df0149_C794" target="_blank">ITA</a>
 	    <a href="http://amzn.com/B00ITQW4EW" target="_blank">ENG</a>
           </li>
           <li>
             Dalmasso, S. & Casagrande, L. (2012). <b>GeoNode  sharing  of  spatial  data  and land applications</b>. GEOmedia, 15(5).
             <a href="http://www.mediageo.it/ojs/index.php/GEOmedia/article/view/46" target="_blank">Link</a>
-          </li> 
+          </li>
           <li>
-          Casadei, S., Bellezza, M., Casagrande, L., Pierleoni, A. & Marchesini, I. (2009). <b>Open source and free technologies for spatial and hydrometeorological data referencing and managing in web based applications</b>. GEOmedia, 13(4). 
+          Casadei, S., Bellezza, M., Casagrande, L., Pierleoni, A. & Marchesini, I. (2009). <b>Open source and free technologies for spatial and hydrometeorological data referencing and managing in web based applications</b>. GEOmedia, 13(4).
           <a href="http://www.mediageo.it/ojs/index.php/GEOmedia/article/view/474" target="_blank">Link</a>
           </li>
         </ul>
