--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     <div class="row">
       <div class="col-md-12">
-        <h2>Tools</h2>
+        <h2>Geospatial tools</h2>
         <p>
           <ul>
             <li><b>Database: </b> PostgreSQL-PostGIS, MySQL, Spatialite, Rasterlite</li>
