--- a/index.html
+++ b/index.html
@@ -89,18 +89,27 @@
         <h2>Writing</h2>
         <ul>
           <li>
-            Luca Casagrande, Paolo Cavallini, Alessandro Frigeri, Alessandro Furieri, Ivan Marchesini, Markus Neteler (2012).
-            <b>GIS Open Source</b>. Dario Flaccovio editore.
-            <a href="http://www.darioflaccovio.it/libro.php/gis-open-source-df0149_C794" target="_blank">ITA</a>
-	    <a href="http://amzn.com/B00ITQW4EW" target="_blank">ENG</a>
+            <b>GIS Open Source</b> - Luca Casagrande, Paolo Cavallini, Alessandro Frigeri, Alessandro Furieri, Ivan Marchesini, Markus Neteler (2012).
+             Dario Flaccovio editore.
           </li>
           <li>
-            Dalmasso, S. & Casagrande, L. (2012). <b>GeoNode  sharing  of  spatial  data  and land applications</b>. GEOmedia, 15(5).
-            <a href="http://www.mediageo.it/ojs/index.php/GEOmedia/article/view/46" target="_blank">Link</a>
+            <b>An open source GIS tool to quantify the visual impact of wind turbines and photovoltaic panels</b>
+             - Annalisa Minelli, Ivan Marchesini, Faith E Taylor, Pierluigi De Rosa, Luca Casagrande, Michele Cenci.
+            Environmental Impact Assessment Review Volume 49, November 2014;
           </li>
           <li>
-          Casadei, S., Bellezza, M., Casagrande, L., Pierleoni, A. & Marchesini, I. (2009). <b>Open source and free technologies for spatial and hydrometeorological data referencing and managing in web based applications</b>. GEOmedia, 13(4).
-          <a href="http://www.mediageo.it/ojs/index.php/GEOmedia/article/view/474" target="_blank">Link</a>
+            <b>Open source WEB applications for spatial data management and for water resource analysis</b> - 
+            Stefano Casadei, Michele Bellezza, Luca Casagrande, Arnaldo Pierleoni.
+            AgroLife Scientific Journal 2285-5718 01/2014
+          </li>
+
+          <li>
+            <b>GeoNode  sharing  of  spatial  data  and land applications</b>
+            - Dalmasso, S. & Casagrande, L. (2012). . GEOmedia, 15(5).
+          </li>
+          <li>
+            <b>Open source and free technologies for spatial and hydrometeorological data referencing and managing in web based applications</b>.
+            Casadei, S., Bellezza, M., Casagrande, L., Pierleoni, A. & Marchesini, I. (2009).  GEOmedia, 13(4).
           </li>
         </ul>
       </div>
